# anonymisation_thesis

./: README.md  data_preprocessing.ipynb  deid_utils.py  deidentification_tool.py  model_tranining_and_evaluation.ipynb  pyproject.toml
models/: crf_model.pkl
